vte/Graphics/UI/Gtk/Vte/VteCharAttrFields.h

#ifndef VTE_CHAR_ATTR_FIELDS_H
#define VTE_CHAR_ATTR_FIELDS_H

#include <vte/vte.h>

gboolean getVteCharAttrUnderline(VteCharAttributes* vca);

gboolean getVteCharAttrStrikethrough(VteCharAttributes* vca);

#endif /* VTE_CHAR_ATTR_FIELDS_H */